assets/css/main.css
/* ... */
@media screen and (max-width: 736px) {
	#banner {
		padding: 7em 3em 5em 3em;
		height: auto;
	}

	#banner h2 {
		font-size: 1.25em;
	}

	#banner br {
		display: none;
	}

	#banner .more {
		/* display: none; */
		margin-bottom: 7vh;
	}
}

body.is-preload #banner h2 {
	-moz-transform: scale(0.95);
	-webkit-transform: scale(0.95);
	-ms-transform: scale(0.95);
	transform: scale(0.95);
	opacity: 0;
}

body.is-preload #banner h2:before,
body.is-preload #banner h2:after {
	width: 0;
}

body.is-preload #banner .more {
	-moz-transform: translateY(8.5em);
	-webkit-transform: translateY(8.5em);
	-ms-transform: translateY(8.5em);
	transform: translateY(8.5em);
	opacity: 0;
}

body.is-preload #banner:after {
	opacity: 1;
}

/* CTA */

#cta .inner {
	display: -moz-flex;
	display: -webkit-flex;
	display: -ms-flex;
	display: flex;
	flex-direction: column;
	max-width: 45em;
}

#cta .inner header {
	padding-right: 3em;
	width: 100%;
}

#cta .inner header p {
	color: inherit;
}
/* #cta .inner header h2 {
	font-size: 2em;
} */

#cta .inner .actions {
	width: 30%;
}

@media screen and (max-width: 980px) {
	#cta .inner {
		display: block;
		text-align: center;
	}

	#cta .inner header {
		padding-right: 0;
		width: 100%;
	}

	#cta .inner .actions {
		margin-left: auto;
		margin-right: auto;
		max-width: 20em;
		width: 100%;
	}
}

@media screen and (max-width: 736px) {
	#cta .inner .actions {
		max-width: none;
	}
}

/* Main */

#main > header {
	padding: 12em 0 10em 0;
	background-attachment: fixed;
	background-position: center center;
	background-repeat: no-repeat;
	background-size: cover;
	text-align: center;
	display: flex;
	justify-content: space-between;
}

#main > header h2 {
	font-size: 1.75em;
	margin: 0 0 0.5em 0;
}

#main > header p {
	color: inherit;
	letter-spacing: 0.225em;
	text-transform: uppercase;
	top: 0;
}

#main > header p a {
	color: inherit;
}

@media screen and (max-width: 1680px) {
	#main > header {
		padding: 10em 0 8em 0;
	}
}

@media screen and (max-width: 1280px) {
	#main > header {
		padding: 8em 3em 6em 3em;
	}
}

@media screen and (max-width: 980px) {
	#main > header {
		padding: 10em 3em 8em 3em;
	}
}

@media screen and (max-width: 736px) {
	#main > header {
		padding: 5em 3em 3em 3em;
	}

	#main > header h2 {
		font-size: 1.25em;
		margin: 0 0 1em 0;
	}
}

body.is-mobile #main > header {
	background-attachment: scroll;
}

/* Footer */

#footer {
	padding: 6em 0 4em 0;
	background-color: #1d242a;
	text-align: center;
}

#footer .icons {
	font-size: 1.25em;
}

#footer .icons a {
	color: rgba(255, 255, 255, 0.5);
}

#footer .icons a:hover {
	color: #fff;
}

#footer .copyright {
	color: rgba(255, 255, 255, 0.5);
	font-size: 0.8em;
	letter-spacing: 0.225em;
	list-style: none;
	padding: 0;
	text-transform: uppercase;
}

#footer .copyright li {
	border-left: solid 1px rgba(255, 255, 255, 0.5);
	display: inline-block;
	line-height: 1em;
	margin-left: 1em;
	padding-left: 1em;
}

#footer .copyright li:first-child {
	border-left: 0;
	margin-left: 0;
	padding-left: 0;
}

#footer .copyright li a {
	color: inherit;
}

#footer .copyright li a:hover {
	color: #fff;
}

@media screen and (max-width: 480px) {
	#footer .copyright li {
		border: 0;
		display: block;
		line-height: 1.65em;
		margin: 0;
		padding: 0.5em 0;
	}
}

@media screen and (max-width: 980px) {
	#footer {
		padding: 4em 3em 2em 3em;
	}
}

@media screen and (max-width: 736px) {
	#footer {
		padding: 3em 2em 1em 2em;
	}
}

/* Landing */

body.landing #page-wrapper {
	background-image:
		-moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
		url("../../images/banner.webp");
	background-image:
		-webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
		url("../../images/banner.webp");
	background-image:
		-ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
		url("../../images/banner.webp");
	background-image:
		linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
		url("../../images/banner.webp");
	background-attachment: fixed;
	background-position: center center;
	background-repeat: no-repeat;
	background-size: cover;
	padding-top: 0;
}

body.landing #footer {
	background-color: #161616;
}

body.is-mobile.landing #page-wrapper {
	background: none;
}

body.is-mobile.landing #banner {
	background-image:
		-moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
		url("../../images/banner.webp");
	background-image:
		-webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
		url("../../images/banner.webp");
	background-image:
		-ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
		url("../../images/banner.webp");
	background-image:
		linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
		url("../../images/banner.webp");
	background-position: center center;
	background-repeat: no-repeat;
	background-size: cover;
	background-attachment: fixed
}

body.is-mobile.landing .wrapper.style4 {
	background-image:
		-moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)),
		url("../../images/banner1.webp");
	background-image:
		-webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
		url("../../images/banner1.webp");
	background-image:
		-ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
		url("../../images/banner1.webp");
	background-image:
		linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
		url("../../images/banner1.webp");
	background-position: center center;
	background-repeat: no-repeat;
	background-size: cover;
}

body.is-mobile.landing #footer {
	background-color: #161616;
}

